# Engineering_Design_Mockup

./: .env.example  .gitignore  README.md  local_school_ai_design_v1.md  local_school_ai_requirements_v3.md  openwebui_adoption_design.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.openwebui-data/: webui.db
.openwebui-data/uploads/: 82df3de9-ee03-4d63-8c74-824a9609e3b9_README.md  d2f913ca-3712-4d48-8d4e-932bf19147db_README.md
.openwebui-data/vector_db/: chroma.sqlite3
backend/: __init__.py  cli.py  config.py  main.py
backend/adapters/: __init__.py
backend/api/: chat.py  compare.py  documents.py  files.py  jobs.py  openwebui.py  results.py
backend/models/: __init__.py  db.py  schemas.py
backend/orchestrator/: __init__.py  chat_orchestrator.py
backend/prompts/: chat_system_prompt.md  cleanup_prompt.md  minutes_prompt.md  revision_suggestions_prompt.md
backend/repositories/: __init__.py  chat_repository.py  comparison_repository.py  database.py  document_repository.py  job_repository.py  minutes_repository.py  storage.py
backend/services/: __init__.py  audit_service.py  chat_service.py  cleanup_service.py  document_chunker.py  document_compare_service.py  document_indexer.py  document_normalizer.py  document_service.py  minutes_service.py  prompt_loader.py  revision_service.py  transcription_service.py
backend/tooling/: __init__.py  base.py  registry.py
backend/workers/: __init__.py  job_worker.py
frontend/: app.js  index.html  styles.css
frontend/chat/: app.js  (+2 more)
tests/: test_adapters.py  test_api_smoke.py
(+14 files in other folders)
