[project]
name = "local-school-ai-minutes"
version = "0.1.0"
description = "Local mockup for school meeting minutes generation with pluggable LLM and ASR adapters."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "pydantic-settings>=2.4.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]
asr-faster-whisper = [
    "faster-whisper>=1.0.0",
]
documents = [
    "docling>=2.0.0",
]

[project.scripts]
school-ai = "backend.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "tests*"]

[tool.setuptools.package-data]
backend = ["prompts/*.md"]
